# skop

./: Cargo.toml  README.md  SPEC.md  todo.txt
.cargo/: config.toml
migrations/: 001_create_investigations.sql
migrations/investigations/: 000_initial_schema.sql
migrations/main/: 000_initial_schema.sql
src/: investigation.rs  main.rs
src/database/: investigation_db.rs  main_db.rs  mod.rs
src/views/: about.rs  help.rs  home.rs  mod.rs  settings.rs  workspace.rs
src/widgets/: about.rs  command_widget.rs  cpu_monitor.rs  mod.rs  network_monitor.rs  process_monitor.rs  raw_command.rs  ssh_command.rs  system_info.rs
