[package]
name = "skop"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
kira = "0.10.8"
rexpect = "0.6.2"
openssh = "0.11.2"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
enum_dispatch = "0.3"
num_cpus = "1.0"
